tests/error/comptime/trivially_copy_values1.bz
// error: invalid call to '__builtin_trivially_copy_values'
// note: while evaluating expression at compile time
// note: destination address must point to uninitialized elements of an allocation if the value type is not trivially destructible
// note: destination address points to this stack object
// error: failed to evaluate expression at compile time
struct test_t
{
	.i: int32;
	destructor(&self) {}
}

function test()
{
	(consteval {
		mut a = [10: test_t]();
		mut b = [10: test_t]();

		__builtin_trivially_copy_values(b.begin(), a.begin(), a.size());
	});
}
